--- a/annotating_initializer/kubernetes/deployment.yaml
+++ b/annotating_initializer/kubernetes/deployment.yaml
@@ -14,7 +14,7 @@ spec:
       labels:
         app: annotator
     spec:
-      serviceAccountName: test
+      serviceAccountName: demo-init
       containers:
       - name: annotator
         image: annotator:latest
